<resources>
    <string name="app_name">SergeyOlshanovApp</string>
    <string name="button_add_note">Добавить</string>
    <string name="start_label">Что использовать</string>
    <string name="start_button_room">ROOM</string>
    <string name="title">Заметки</string>
    <string name="main_title">Applications</string>
    <string name="toast_enter_name">Введите имя заметки</string>
    <string name="list_notes">List notes</string>
    <string name="start_button_firebase">Farebase</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="start_button_login">Login</string>
    <string name="toast_wrong_enter">Введите email и пароль</string>
</resources>